--- a/backend/env.example
+++ b/backend/env.example
@@ -11,8 +11,16 @@ JWT_SECRET=your_jwt_secret_here
 # CORS Origins (for production)
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
 
-# Optional: Email configuration for notifications
+# Email Configuration for Notifications
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_app_password 
+SMTP_PASS=your_app_password
+
+# Admin Configuration
+ADMIN_EMAIL=admin@yourdomain.com
+ADMIN_PASSWORD=admin_password_here
+
+# Spam Prevention
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=3 
