--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1",
-    "mongoose": "^8.0.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "compression": "^1.7.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "nodemailer": "^6.10.1",
+    "nodemon": "^3.0.1",
+    "rate-limiter-flexible": "^2.4.2"
   }
 }
