--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "framer-motion": "^11.0.0",
+    "mongodb": "^6.18.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.0.1",
